// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationItem /> Should render correctly 1`] = `
<div>
  <div
    class="feature-card"
    role="link"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          />
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            />
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </div>
</div>
`;

exports[`<NavigationItem /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    class="feature-card"
    href="https://duckduckgo.com/"
    style="text-decoration: none;"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          />
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            />
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="feature-card test-custom-classname"
    role="link"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          />
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            />
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </div>
</div>
`;

exports[`<NavigationItem /> Should render with nextified href 1`] = `
<div>
  <div
    class="feature-card"
    role="link"
    style="cursor: pointer;"
    tabindex="0"
  >
    <div
      class="card"
    >
      <div
        class="card__background"
      />
      <div
        class="card__outer-container card__outer-container--padded"
      >
        <div
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          />
          <div
            class="feature-card__center-container"
          >
            <div
              class="typography__main typography--no-padding feature-card__title"
            />
          </div>
        </div>
      </div>
      <div
        class="card__banner"
      />
    </div>
  </div>
</div>
`;
